@@ -199,7 +199,7 @@ basearchvar=$(tr a-z A-Z <<<"$basearch")
 slc_complang=unknown
 case $slc_dialect in
     ptl*)     slc_complang=cpp;;
-    seqc|ppp*) slc_complang=c;;
+    spr|seqc|ppp*) slc_complang=c;;
     utc*)     slc_complang=utc;;
     *) echo "unknown dialect: $slc_dialect" >&2;;
 esac
@@ -207,7 +207,7 @@ esac
 # Transformation selection
 slc_transbase=unknown
 case $slc_dialect-$slc_arch in
-    utc*|seqc*|ptl*) slc_transbase=$slc_dialect	;;
+    spr*|utc*|seqc*|ptl*) slc_transbase=$slc_dialect	;;
     ppp*-*)     slc_transbase=$slc_dialect$basearch ;;
     *) echo "unknown combination: $slc_dialect-$slc_arch" >&2;;
 esac
